--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <!--using animation on CSS sytle sheet-->
-    <div id="box1">HI</div>
+    <div id="box1">HI MAH TALL  </div>
   </body>
 </html>
